[package]
name = "story-rebase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
dialoguer = "0.10.4"
glob = "0.3.1"
pretty_assertions = "1.4.0"
ui_test = "0.21.1"

[[test]]
name = "ui"
harness = false
